Fix contrast on label text to improve accessiblity

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,9 +96,11 @@ footer {
 /* --- forms --- */
 form {
     margin-top: 80px;
-
 }
 
+.input-field>label {
+    color: #727070;
+}
 .form-row {
     margin: 40px 20px 40px 20px;
     padding-left: 20px;
